# ocean-plastic-report

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
config/: pilot.saint-lucia.yaml  sources.yaml
design_handoff_plastics_compare_dashboard/: Plastics Compare Dashboard.dc.html  README.md
design_handoff_plastics_compare_dashboard/data/: countries.geojson  meta.json  rivers.json  timeline-regions.json  timeline-trade.json
docs/: DATA_SOURCES.md  LEGAL_FRAMING.md  METHODOLOGY.md  MODEL.md
output/: sample_saint_lucia_report.html  sample_saint_lucia_report.md
src/oceanplastic/: __init__.py  cli.py  normalize.py  schema.py  sources.py
src/oceanplastic/attribute/: __init__.py  brand.py  drift.py  forensic.py  fuse.py
src/oceanplastic/data/: __init__.py  jambeck_top_emitters.csv
src/oceanplastic/ingest/: __init__.py  baselines.py  bffp.py  openlittermap.py
src/oceanplastic/report/: __init__.py  generate.py  pdf.py
src/oceanplastic/report/templates/: report.html.j2  report.md.j2
src/oceanplastic/value/: __init__.py  valuation.py
src/oceanplastic/watch/: __init__.py  build.py  bundle.py
tests/: test_brand.py  test_normalize.py  test_valuation.py
web/: README.md  app.js  fund.html  fund.js  index.html  styles.css
web/data/: countries.csv  countries.geojson  meta.json  orgs.json  production.json  projects.json  rivers.csv  rivers.json  timeline-regions.json  timeline-trade.json
