[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanplastic"
version = "0.1.0"
description = "Source-attribution & financial-retribution reporting model for ocean plastic on a coastline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "pydantic>=2",
    "pyyaml>=6",
    "jinja2>=3",
    "reportlab>=4",
    "pypdf>=4",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Full build (out of MVP scope): drift backtracking + GIS layer.
fullbuild = ["opendrift", "copernicusmarine", "cdsapi", "xarray", "geopandas", "shapely"]

[project.scripts]
oceanplastic = "oceanplastic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oceanplastic = ["data/*.csv", "report/templates/*.j2"]
